3/17 8:40 PM commit - training combo models (best guess!). Let's hope it works out. Lots of this is empirical.

--- a/gancode/gan_training_v2.ipynb
+++ b/gancode/gan_training_v2.ipynb
@@ -712,7 +712,7 @@
       "               batch_size: 1                             \n",
       "                    beta1: 0.5                           \n",
       "          checkpoints_dir: ./checkpoints                 \n",
-      "           continue_train: True                          \t[default: False]\n",
+      "           continue_train: False                         \n",
       "                crop_size: 256                           \n",
       "                 dataroot: /users/riya/race/gandataset   \t[default: None]\n",
       "             dataset_mode: aligned                       \n",
@@ -725,14 +725,14 @@
       "           display_server: http://localhost              \n",
       "          display_winsize: 256                           \n",
       "                    epoch: latest                        \n",
-      "              epoch_count: 35                            \t[default: 1]\n",
+      "              epoch_count: 1                             \n",
       "                 gan_mode: vanilla                       \n",
-      "                  gpu_ids: 0                             \n",
+      "                  gpu_ids: 0,3                           \t[default: 0]\n",
       "                init_gain: 0.02                          \n",
       "                init_type: normal                        \n",
       "                 input_nc: 3                             \n",
       "                  isTrain: True                          \t[default: None]\n",
-      "                lambda_L1: 100.0                         \n",
+      "                lambda_L1: 10.0                          \t[default: 100.0]\n",
       "                load_iter: 0                             \t[default: 0]\n",
       "                load_size: 256                           \t[default: 286]\n",
       "                       lr: 2e-07                         \t[default: 0.0002]\n",
@@ -743,7 +743,7 @@
       "                 n_epochs: 100                           \n",
       "           n_epochs_decay: 100                           \n",
       "               n_layers_D: 3                             \n",
-      "                     name: raceGAN_test5                 \t[default: experiment_name]\n",
+      "                     name: raceGAN_combo2                \t[default: experiment_name]\n",
       "                      ndf: 64                            \n",
       "                     netD: basic                         \n",
       "                     netG: unet_256                      \n",
@@ -772,8 +772,6 @@
       "initialize network with normal\n",
       "initialize network with normal\n",
       "model [Pix2PixModel] was created\n",
-      "loading the model from ./checkpoints/raceGAN_test5/latest_net_G.pth\n",
-      "loading the model from ./checkpoints/raceGAN_test5/latest_net_D.pth\n",
       "---------- Networks initialized -------------\n",
       "[Network G] Total number of parameters : 54.414 M\n",
       "[Network D] Total number of parameters : 2.769 M\n",
@@ -813,7 +811,7 @@
       "    conn = self._new_conn()\n",
       "  File \"/usr/local/lib/python3.6/dist-packages/urllib3/connection.py\", line 187, in _new_conn\n",
       "    self, \"Failed to establish a new connection: %s\" % e\n",
-      "urllib3.exceptions.NewConnectionError: <urllib3.connection.HTTPConnection object at 0x7f6b0917a6a0>: Failed to establish a new connection: [Errno 111] Connection refused\n",
+      "urllib3.exceptions.NewConnectionError: <urllib3.connection.HTTPConnection object at 0x7f88d9f4d588>: Failed to establish a new connection: [Errno 111] Connection refused\n",
       "\n",
       "During handling of the above exception, another exception occurred:\n",
       "\n",
@@ -824,7 +822,7 @@
       "    method, url, error=e, _pool=self, _stacktrace=sys.exc_info()[2]\n",
       "  File \"/usr/local/lib/python3.6/dist-packages/urllib3/util/retry.py\", line 592, in increment\n",
       "    raise MaxRetryError(_pool, url, error or ResponseError(cause))\n",
-      "urllib3.exceptions.MaxRetryError: HTTPConnectionPool(host='localhost', port=8097): Max retries exceeded with url: /env/main (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f6b0917a6a0>: Failed to establish a new connection: [Errno 111] Connection refused',))\n",
+      "urllib3.exceptions.MaxRetryError: HTTPConnectionPool(host='localhost', port=8097): Max retries exceeded with url: /env/main (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f88d9f4d588>: Failed to establish a new connection: [Errno 111] Connection refused',))\n",
       "\n",
       "During handling of the above exception, another exception occurred:\n",
       "\n",
@@ -841,74 +839,65 @@
       "    r = adapter.send(request, **kwargs)\n",
       "  File \"/usr/local/lib/python3.6/dist-packages/requests/adapters.py\", line 516, in send\n",
       "    raise ConnectionError(e, request=request)\n",
-      "requests.exceptions.ConnectionError: HTTPConnectionPool(host='localhost', port=8097): Max retries exceeded with url: /env/main (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f6b0917a6a0>: Failed to establish a new connection: [Errno 111] Connection refused',))\n",
-      "[Errno 111] Connection refused\n"
+      "requests.exceptions.ConnectionError: HTTPConnectionPool(host='localhost', port=8097): Max retries exceeded with url: /env/main (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f88d9f4d588>: Failed to establish a new connection: [Errno 111] Connection refused',))\n",
+      "[Errno 111] Connection refused\n",
+      "\n",
+      "\n",
+      "Could not connect to Visdom server. \n",
+      " Trying to start a server....\n",
+      "Command: /usr/local/bin/python -m visdom.server -p 8097 &>/dev/null &\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "Could not connect to Visdom server. \n",
-      " Trying to start a server....\n",
-      "Command: /usr/local/bin/python -m visdom.server -p 8097 &>/dev/null &\n",
-      "create web directory ./checkpoints/raceGAN_test5/web...\n",
+      "create web directory ./checkpoints/raceGAN_combo2/web...\n",
       "/usr/local/lib/python3.6/dist-packages/torch/optim/lr_scheduler.py:134: UserWarning: Detected call of `lr_scheduler.step()` before `optimizer.step()`. In PyTorch 1.1.0 and later, you should call them in the opposite order: `optimizer.step()` before `lr_scheduler.step()`.  Failure to do this will result in PyTorch skipping the first value of the learning rate schedule. See more details at https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\n",
       "  \"https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\", UserWarning)\n",
       "learning rate 0.0000002 -> 0.0000002\n",
-      "(epoch: 35, iters: 100, time: 0.203, data: 0.130) G_GAN: 2.517 G_L1: 9.471 D_real: 0.352 D_fake: 0.096 \n",
-      "(epoch: 35, iters: 200, time: 0.204, data: 0.003) G_GAN: 2.392 G_L1: 12.043 D_real: 0.288 D_fake: 0.112 \n",
-      "(epoch: 35, iters: 300, time: 0.200, data: 0.002) G_GAN: 1.496 G_L1: 16.631 D_real: 0.051 D_fake: 0.315 \n",
-      "(epoch: 35, iters: 400, time: 0.467, data: 0.002) G_GAN: 1.735 G_L1: 10.400 D_real: 0.306 D_fake: 0.234 \n",
-      "(epoch: 35, iters: 500, time: 0.202, data: 0.003) G_GAN: 2.270 G_L1: 33.716 D_real: 0.011 D_fake: 0.128 \n",
-      "(epoch: 35, iters: 600, time: 0.206, data: 0.002) G_GAN: 2.112 G_L1: 15.768 D_real: 0.143 D_fake: 0.164 \n",
-      "(epoch: 35, iters: 700, time: 0.211, data: 0.002) G_GAN: 2.503 G_L1: 21.294 D_real: 0.018 D_fake: 0.099 \n",
-      "(epoch: 35, iters: 800, time: 0.270, data: 0.002) G_GAN: 2.009 G_L1: 29.035 D_real: 0.038 D_fake: 0.181 \n",
-      "(epoch: 35, iters: 900, time: 0.203, data: 0.002) G_GAN: 2.504 G_L1: 11.008 D_real: 0.483 D_fake: 0.102 \n",
-      "(epoch: 35, iters: 1000, time: 0.206, data: 0.002) G_GAN: 2.307 G_L1: 8.503 D_real: 0.387 D_fake: 0.123 \n",
-      "(epoch: 35, iters: 1100, time: 0.204, data: 0.002) G_GAN: 2.158 G_L1: 13.864 D_real: 0.419 D_fake: 0.145 \n",
-      "(epoch: 35, iters: 1200, time: 0.276, data: 0.002) G_GAN: 2.080 G_L1: 27.632 D_real: 0.103 D_fake: 0.162 \n",
-      "(epoch: 35, iters: 1300, time: 0.205, data: 0.002) G_GAN: 2.274 G_L1: 12.229 D_real: 0.179 D_fake: 0.125 \n",
-      "(epoch: 35, iters: 1400, time: 0.210, data: 0.003) G_GAN: 2.493 G_L1: 15.332 D_real: 0.091 D_fake: 0.103 \n",
-      "(epoch: 35, iters: 1500, time: 0.208, data: 0.002) G_GAN: 2.350 G_L1: 10.180 D_real: 0.397 D_fake: 0.114 \n",
-      "(epoch: 35, iters: 1600, time: 0.271, data: 0.002) G_GAN: 2.522 G_L1: 11.849 D_real: 0.252 D_fake: 0.099 \n",
-      "saving the model at the end of epoch 35, iters 1623\n",
-      "End of epoch 35 / 200 \t Time Taken: 195 sec\n",
+      "(epoch: 1, iters: 100, time: 0.208, data: 0.139) G_GAN: 0.630 G_L1: 4.328 D_real: 0.584 D_fake: 1.045 \n",
+      "(epoch: 1, iters: 200, time: 0.210, data: 0.001) G_GAN: 0.638 G_L1: 4.746 D_real: 0.559 D_fake: 0.991 \n",
+      "(epoch: 1, iters: 300, time: 0.207, data: 0.002) G_GAN: 0.651 G_L1: 3.893 D_real: 0.558 D_fake: 0.970 \n",
+      "(epoch: 1, iters: 400, time: 0.340, data: 0.001) G_GAN: 0.662 G_L1: 4.076 D_real: 0.569 D_fake: 0.974 \n",
+      "(epoch: 1, iters: 500, time: 0.211, data: 0.002) G_GAN: 0.670 G_L1: 6.852 D_real: 0.542 D_fake: 0.913 \n",
+      "(epoch: 1, iters: 600, time: 0.207, data: 0.002) G_GAN: 0.689 G_L1: 6.138 D_real: 0.542 D_fake: 0.897 \n",
+      "(epoch: 1, iters: 700, time: 0.214, data: 0.001) G_GAN: 0.727 G_L1: 6.404 D_real: 0.574 D_fake: 0.874 \n",
+      "(epoch: 1, iters: 800, time: 0.276, data: 0.002) G_GAN: 0.731 G_L1: 4.002 D_real: 0.538 D_fake: 0.863 \n",
+      "(epoch: 1, iters: 900, time: 0.205, data: 0.002) G_GAN: 0.707 G_L1: 4.519 D_real: 0.492 D_fake: 0.851 \n",
+      "(epoch: 1, iters: 1000, time: 0.208, data: 0.002) G_GAN: 0.786 G_L1: 5.696 D_real: 0.559 D_fake: 0.825 \n",
+      "(epoch: 1, iters: 1100, time: 0.206, data: 0.003) G_GAN: 0.739 G_L1: 4.015 D_real: 0.444 D_fake: 0.816 \n",
+      "(epoch: 1, iters: 1200, time: 0.278, data: 0.002) G_GAN: 0.789 G_L1: 5.621 D_real: 0.547 D_fake: 0.768 \n",
+      "(epoch: 1, iters: 1300, time: 0.213, data: 0.001) G_GAN: 0.787 G_L1: 7.179 D_real: 0.490 D_fake: 0.773 \n",
+      "(epoch: 1, iters: 1400, time: 0.214, data: 0.001) G_GAN: 0.828 G_L1: 4.781 D_real: 0.526 D_fake: 0.731 \n",
+      "(epoch: 1, iters: 1500, time: 0.214, data: 0.003) G_GAN: 0.843 G_L1: 4.890 D_real: 0.547 D_fake: 0.739 \n",
+      "(epoch: 1, iters: 1600, time: 0.380, data: 0.002) G_GAN: 0.861 G_L1: 4.245 D_real: 0.608 D_fake: 0.712 \n",
+      "End of epoch 1 / 200 \t Time Taken: 200 sec\n",
       "learning rate 0.0000002 -> 0.0000002\n",
-      "(epoch: 36, iters: 77, time: 0.214, data: 0.002) G_GAN: 2.418 G_L1: 20.131 D_real: 0.026 D_fake: 0.109 \n",
-      "(epoch: 36, iters: 177, time: 0.208, data: 0.002) G_GAN: 2.269 G_L1: 23.451 D_real: 0.039 D_fake: 0.128 \n",
-      "(epoch: 36, iters: 277, time: 0.208, data: 0.003) G_GAN: 2.235 G_L1: 23.023 D_real: 0.713 D_fake: 0.138 \n",
-      "(epoch: 36, iters: 377, time: 0.488, data: 0.002) G_GAN: 2.165 G_L1: 42.439 D_real: 0.034 D_fake: 0.145 \n",
-      "(epoch: 36, iters: 477, time: 0.208, data: 0.002) G_GAN: 2.024 G_L1: 16.985 D_real: 0.490 D_fake: 0.173 \n",
-      "(epoch: 36, iters: 577, time: 0.208, data: 0.003) G_GAN: 2.402 G_L1: 14.687 D_real: 0.135 D_fake: 0.115 \n",
-      "(epoch: 36, iters: 677, time: 0.213, data: 0.002) G_GAN: 2.275 G_L1: 9.689 D_real: 0.324 D_fake: 0.125 \n",
-      "(epoch: 36, iters: 777, time: 0.271, data: 0.002) G_GAN: 2.086 G_L1: 21.147 D_real: 0.061 D_fake: 0.157 \n",
-      "(epoch: 36, iters: 877, time: 0.243, data: 0.002) G_GAN: 2.344 G_L1: 25.026 D_real: 0.016 D_fake: 0.118 \n",
-      "(epoch: 36, iters: 977, time: 0.270, data: 0.003) G_GAN: 2.458 G_L1: 42.631 D_real: 0.007 D_fake: 0.105 \n",
-      "(epoch: 36, iters: 1077, time: 0.249, data: 0.002) G_GAN: 2.492 G_L1: 10.234 D_real: 0.407 D_fake: 0.104 \n",
-      "(epoch: 36, iters: 1177, time: 0.325, data: 0.002) G_GAN: 2.202 G_L1: 46.116 D_real: 0.006 D_fake: 0.136 \n",
-      "(epoch: 36, iters: 1277, time: 0.265, data: 0.002) G_GAN: 2.028 G_L1: 17.816 D_real: 0.061 D_fake: 0.169 \n",
-      "(epoch: 36, iters: 1377, time: 0.296, data: 0.003) G_GAN: 1.645 G_L1: 26.479 D_real: 0.033 D_fake: 0.271 \n",
-      "(epoch: 36, iters: 1477, time: 0.262, data: 0.003) G_GAN: 2.100 G_L1: 17.503 D_real: 0.098 D_fake: 0.160 \n",
-      "(epoch: 36, iters: 1577, time: 0.317, data: 0.003) G_GAN: 1.798 G_L1: 22.612 D_real: 0.366 D_fake: 0.215 \n",
-      "End of epoch 36 / 200 \t Time Taken: 206 sec\n",
+      "(epoch: 2, iters: 77, time: 0.335, data: 0.002) G_GAN: 0.869 G_L1: 6.303 D_real: 0.559 D_fake: 0.701 \n",
+      "(epoch: 2, iters: 177, time: 0.333, data: 0.002) G_GAN: 0.899 G_L1: 4.233 D_real: 0.571 D_fake: 0.683 \n",
+      "(epoch: 2, iters: 277, time: 0.335, data: 0.002) G_GAN: 0.884 G_L1: 3.636 D_real: 0.478 D_fake: 0.677 \n",
+      "(epoch: 2, iters: 377, time: 0.478, data: 0.003) G_GAN: 0.905 G_L1: 6.125 D_real: 0.469 D_fake: 0.664 \n",
+      "(epoch: 2, iters: 477, time: 0.323, data: 0.003) G_GAN: 0.926 G_L1: 6.522 D_real: 0.513 D_fake: 0.650 \n",
+      "(epoch: 2, iters: 577, time: 0.306, data: 0.002) G_GAN: 0.856 G_L1: 3.602 D_real: 0.402 D_fake: 0.696 \n",
+      "(epoch: 2, iters: 677, time: 0.335, data: 0.003) G_GAN: 0.975 G_L1: 5.568 D_real: 0.538 D_fake: 0.622 \n",
+      "(epoch: 2, iters: 777, time: 0.376, data: 0.003) G_GAN: 0.960 G_L1: 3.636 D_real: 0.456 D_fake: 0.619 \n",
+      "(epoch: 2, iters: 877, time: 0.331, data: 0.002) G_GAN: 0.974 G_L1: 3.862 D_real: 0.463 D_fake: 0.606 \n",
+      "(epoch: 2, iters: 977, time: 0.331, data: 0.003) G_GAN: 0.917 G_L1: 6.119 D_real: 0.450 D_fake: 0.656 \n",
+      "(epoch: 2, iters: 1077, time: 0.377, data: 0.002) G_GAN: 0.987 G_L1: 4.163 D_real: 0.429 D_fake: 0.590 \n",
+      "(epoch: 2, iters: 1177, time: 0.528, data: 0.003) G_GAN: 0.977 G_L1: 4.757 D_real: 0.367 D_fake: 0.592 \n",
+      "(epoch: 2, iters: 1277, time: 0.593, data: 0.001) G_GAN: 1.024 G_L1: 3.755 D_real: 0.464 D_fake: 0.564 \n",
+      "(epoch: 2, iters: 1377, time: 0.661, data: 0.002) G_GAN: 0.963 G_L1: 6.885 D_real: 0.398 D_fake: 0.585 \n",
+      "(epoch: 2, iters: 1477, time: 0.882, data: 0.003) G_GAN: 1.071 G_L1: 4.981 D_real: 0.411 D_fake: 0.528 \n",
+      "(epoch: 2, iters: 1577, time: 1.237, data: 0.003) G_GAN: 0.982 G_L1: 3.895 D_real: 0.297 D_fake: 0.573 \n",
+      "End of epoch 2 / 200 \t Time Taken: 397 sec\n",
       "learning rate 0.0000002 -> 0.0000002\n",
-      "(epoch: 37, iters: 54, time: 0.240, data: 0.002) G_GAN: 1.824 G_L1: 16.247 D_real: 0.684 D_fake: 0.208 \n",
-      "(epoch: 37, iters: 154, time: 0.250, data: 0.003) G_GAN: 1.603 G_L1: 13.343 D_real: 0.199 D_fake: 0.265 \n",
-      "(epoch: 37, iters: 254, time: 0.301, data: 0.002) G_GAN: 2.384 G_L1: 16.822 D_real: 0.712 D_fake: 0.111 \n",
-      "(epoch: 37, iters: 354, time: 0.582, data: 0.002) G_GAN: 2.413 G_L1: 45.004 D_real: 0.023 D_fake: 0.108 \n",
-      "(epoch: 37, iters: 454, time: 0.335, data: 0.002) G_GAN: 1.914 G_L1: 16.890 D_real: 0.464 D_fake: 0.191 \n",
-      "(epoch: 37, iters: 554, time: 0.422, data: 0.003) G_GAN: 1.881 G_L1: 13.824 D_real: 0.183 D_fake: 0.220 \n",
-      "(epoch: 37, iters: 654, time: 0.625, data: 0.003) G_GAN: 2.016 G_L1: 16.321 D_real: 0.250 D_fake: 0.173 \n",
-      "(epoch: 37, iters: 754, time: 0.960, data: 0.003) G_GAN: 1.567 G_L1: 15.166 D_real: 0.675 D_fake: 0.283 \n",
-      "(epoch: 37, iters: 854, time: 0.802, data: 0.002) G_GAN: 2.483 G_L1: 16.914 D_real: 0.096 D_fake: 0.100 \n"
+      "(epoch: 3, iters: 54, time: 1.253, data: 0.002) G_GAN: 1.074 G_L1: 5.606 D_real: 0.389 D_fake: 0.527 \n"
      ]
     }
    ],
    "source": [
-    "!python train.py --dataroot /users/riya/race/gandataset --lr 0.0000002 --continue_train --epoch_count 35 --name raceGAN_test5 --model pix2pix --gpu_ids 0 --load_size 256 --crop_size 256"
+    "!python train.py --dataroot /users/riya/race/gandataset --lambda_L1 10.0 --lr 0.0000002 --name raceGAN_combo2 --model pix2pix --gpu_ids 0,3 --load_size 256 --crop_size 256"
    ]
   },
   {
