--- a/gancode/gan_training_v3.ipynb
+++ b/gancode/gan_training_v3.ipynb
@@ -732,10 +732,10 @@
       "                init_type: normal                        \n",
       "                 input_nc: 3                             \n",
       "                  isTrain: True                          \t[default: None]\n",
-      "                lambda_L1: 10.0                          \t[default: 100.0]\n",
+      "                lambda_L1: 50.0                          \t[default: 100.0]\n",
       "                load_iter: 0                             \t[default: 0]\n",
       "                load_size: 256                           \t[default: 286]\n",
-      "                       lr: 2e-05                         \t[default: 0.0002]\n",
+      "                       lr: 2e-07                         \t[default: 0.0002]\n",
       "           lr_decay_iters: 50                            \n",
       "                lr_policy: linear                        \n",
       "         max_dataset_size: inf                           \n",
@@ -743,7 +743,7 @@
       "                 n_epochs: 100                           \n",
       "           n_epochs_decay: 100                           \n",
       "               n_layers_D: 3                             \n",
-      "                     name: raceGAN_l1_test1              \t[default: experiment_name]\n",
+      "                     name: raceGAN_combo1                \t[default: experiment_name]\n",
       "                      ndf: 64                            \n",
       "                     netD: basic                         \n",
       "                     netG: unet_256                      \n",
@@ -811,7 +811,7 @@
       "    conn = self._new_conn()\n",
       "  File \"/usr/local/lib/python3.6/dist-packages/urllib3/connection.py\", line 187, in _new_conn\n",
       "    self, \"Failed to establish a new connection: %s\" % e\n",
-      "urllib3.exceptions.NewConnectionError: <urllib3.connection.HTTPConnection object at 0x7f3f517cc5c0>: Failed to establish a new connection: [Errno 111] Connection refused\n",
+      "urllib3.exceptions.NewConnectionError: <urllib3.connection.HTTPConnection object at 0x7ff5abaa25c0>: Failed to establish a new connection: [Errno 111] Connection refused\n",
       "\n",
       "During handling of the above exception, another exception occurred:\n",
       "\n",
@@ -822,7 +822,7 @@
       "    method, url, error=e, _pool=self, _stacktrace=sys.exc_info()[2]\n",
       "  File \"/usr/local/lib/python3.6/dist-packages/urllib3/util/retry.py\", line 592, in increment\n",
       "    raise MaxRetryError(_pool, url, error or ResponseError(cause))\n",
-      "urllib3.exceptions.MaxRetryError: HTTPConnectionPool(host='localhost', port=8098): Max retries exceeded with url: /env/main (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f3f517cc5c0>: Failed to establish a new connection: [Errno 111] Connection refused',))\n",
+      "urllib3.exceptions.MaxRetryError: HTTPConnectionPool(host='localhost', port=8098): Max retries exceeded with url: /env/main (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7ff5abaa25c0>: Failed to establish a new connection: [Errno 111] Connection refused',))\n",
       "\n",
       "During handling of the above exception, another exception occurred:\n",
       "\n",
@@ -839,7 +839,7 @@
       "    r = adapter.send(request, **kwargs)\n",
       "  File \"/usr/local/lib/python3.6/dist-packages/requests/adapters.py\", line 516, in send\n",
       "    raise ConnectionError(e, request=request)\n",
-      "requests.exceptions.ConnectionError: HTTPConnectionPool(host='localhost', port=8098): Max retries exceeded with url: /env/main (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f3f517cc5c0>: Failed to establish a new connection: [Errno 111] Connection refused',))\n",
+      "requests.exceptions.ConnectionError: HTTPConnectionPool(host='localhost', port=8098): Max retries exceeded with url: /env/main (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7ff5abaa25c0>: Failed to establish a new connection: [Errno 111] Connection refused',))\n",
       "[Errno 111] Connection refused\n",
       "\n",
       "\n",
@@ -852,29 +852,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "create web directory ./checkpoints/raceGAN_l1_test1/web...\n",
+      "create web directory ./checkpoints/raceGAN_combo1/web...\n",
       "/usr/local/lib/python3.6/dist-packages/torch/optim/lr_scheduler.py:134: UserWarning: Detected call of `lr_scheduler.step()` before `optimizer.step()`. In PyTorch 1.1.0 and later, you should call them in the opposite order: `optimizer.step()` before `lr_scheduler.step()`.  Failure to do this will result in PyTorch skipping the first value of the learning rate schedule. See more details at https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\n",
       "  \"https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\", UserWarning)\n",
-      "learning rate 0.0000200 -> 0.0000200\n",
-      "(epoch: 1, iters: 100, time: 0.219, data: 0.171) G_GAN: 1.493 G_L1: 2.908 D_real: 0.419 D_fake: 0.303 \n",
-      "(epoch: 1, iters: 200, time: 0.215, data: 0.003) G_GAN: 1.378 G_L1: 1.960 D_real: 0.334 D_fake: 0.400 \n",
-      "(epoch: 1, iters: 300, time: 0.216, data: 0.003) G_GAN: 1.260 G_L1: 3.392 D_real: 0.709 D_fake: 0.347 \n",
-      "(epoch: 1, iters: 400, time: 0.377, data: 0.002) G_GAN: 1.256 G_L1: 1.863 D_real: 0.661 D_fake: 0.315 \n",
-      "(epoch: 1, iters: 500, time: 0.218, data: 0.002) G_GAN: 0.807 G_L1: 1.517 D_real: 0.648 D_fake: 0.679 \n",
-      "(epoch: 1, iters: 600, time: 0.220, data: 0.003) G_GAN: 1.227 G_L1: 2.384 D_real: 0.707 D_fake: 0.342 \n",
-      "(epoch: 1, iters: 700, time: 0.216, data: 0.002) G_GAN: 1.188 G_L1: 4.226 D_real: 0.052 D_fake: 0.663 \n",
-      "(epoch: 1, iters: 800, time: 0.284, data: 0.002) G_GAN: 1.162 G_L1: 1.599 D_real: 1.793 D_fake: 0.351 \n",
-      "(epoch: 1, iters: 900, time: 0.219, data: 0.002) G_GAN: 1.257 G_L1: 2.119 D_real: 0.394 D_fake: 0.394 \n",
-      "(epoch: 1, iters: 1000, time: 0.216, data: 0.003) G_GAN: 1.372 G_L1: 2.035 D_real: 0.362 D_fake: 0.385 \n",
-      "(epoch: 1, iters: 1100, time: 0.214, data: 0.002) G_GAN: 1.445 G_L1: 2.617 D_real: 0.124 D_fake: 0.510 \n",
-      "(epoch: 1, iters: 1200, time: 0.279, data: 0.003) G_GAN: 1.132 G_L1: 2.065 D_real: 0.963 D_fake: 0.344 \n",
-      "(epoch: 1, iters: 1300, time: 0.221, data: 0.002) G_GAN: 1.210 G_L1: 1.825 D_real: 0.278 D_fake: 0.461 \n",
-      "(epoch: 1, iters: 1400, time: 0.217, data: 0.003) G_GAN: 1.080 G_L1: 1.258 D_real: 0.976 D_fake: 0.282 \n"
+      "learning rate 0.0000002 -> 0.0000002\n",
+      "(epoch: 1, iters: 100, time: 0.207, data: 0.180) G_GAN: 0.697 G_L1: 21.004 D_real: 0.655 D_fake: 0.964 \n",
+      "(epoch: 1, iters: 200, time: 0.217, data: 0.003) G_GAN: 0.692 G_L1: 21.290 D_real: 0.615 D_fake: 0.930 \n",
+      "(epoch: 1, iters: 300, time: 0.207, data: 0.001) G_GAN: 0.720 G_L1: 25.616 D_real: 0.576 D_fake: 0.876 \n",
+      "(epoch: 1, iters: 400, time: 0.382, data: 0.002) G_GAN: 0.739 G_L1: 23.612 D_real: 0.609 D_fake: 0.861 \n",
+      "(epoch: 1, iters: 500, time: 0.217, data: 0.002) G_GAN: 0.762 G_L1: 26.906 D_real: 0.656 D_fake: 0.834 \n",
+      "(epoch: 1, iters: 600, time: 0.217, data: 0.002) G_GAN: 0.764 G_L1: 23.219 D_real: 0.638 D_fake: 0.838 \n",
+      "(epoch: 1, iters: 700, time: 0.215, data: 0.002) G_GAN: 0.789 G_L1: 28.716 D_real: 0.585 D_fake: 0.820 \n",
+      "(epoch: 1, iters: 800, time: 0.271, data: 0.002) G_GAN: 0.799 G_L1: 19.309 D_real: 0.583 D_fake: 0.790 \n",
+      "(epoch: 1, iters: 900, time: 0.219, data: 0.002) G_GAN: 0.835 G_L1: 19.224 D_real: 0.557 D_fake: 0.756 \n",
+      "(epoch: 1, iters: 1000, time: 0.218, data: 0.002) G_GAN: 0.836 G_L1: 25.413 D_real: 0.591 D_fake: 0.757 \n",
+      "(epoch: 1, iters: 1100, time: 0.217, data: 0.002) G_GAN: 0.847 G_L1: 24.964 D_real: 0.585 D_fake: 0.723 \n",
+      "(epoch: 1, iters: 1200, time: 0.275, data: 0.002) G_GAN: 0.865 G_L1: 20.048 D_real: 0.589 D_fake: 0.724 \n",
+      "(epoch: 1, iters: 1300, time: 0.217, data: 0.002) G_GAN: 0.881 G_L1: 16.049 D_real: 0.489 D_fake: 0.662 \n",
+      "(epoch: 1, iters: 1400, time: 0.217, data: 0.002) G_GAN: 0.893 G_L1: 20.689 D_real: 0.539 D_fake: 0.664 \n",
+      "(epoch: 1, iters: 1500, time: 0.218, data: 0.003) G_GAN: 0.907 G_L1: 22.065 D_real: 0.548 D_fake: 0.689 \n",
+      "(epoch: 1, iters: 1600, time: 0.282, data: 0.003) G_GAN: 0.919 G_L1: 33.405 D_real: 0.556 D_fake: 0.666 \n",
+      "End of epoch 1 / 200 \t Time Taken: 198 sec\n",
+      "learning rate 0.0000002 -> 0.0000002\n",
+      "(epoch: 2, iters: 77, time: 0.216, data: 0.003) G_GAN: 0.950 G_L1: 22.049 D_real: 0.441 D_fake: 0.629 \n",
+      "(epoch: 2, iters: 177, time: 0.222, data: 0.003) G_GAN: 0.954 G_L1: 17.226 D_real: 0.515 D_fake: 0.622 \n",
+      "(epoch: 2, iters: 277, time: 0.218, data: 0.003) G_GAN: 0.954 G_L1: 19.171 D_real: 0.549 D_fake: 0.652 \n",
+      "(epoch: 2, iters: 377, time: 0.358, data: 0.002) G_GAN: 0.986 G_L1: 22.513 D_real: 0.463 D_fake: 0.594 \n",
+      "(epoch: 2, iters: 477, time: 0.223, data: 0.003) G_GAN: 0.991 G_L1: 29.866 D_real: 0.576 D_fake: 0.601 \n",
+      "(epoch: 2, iters: 577, time: 0.220, data: 0.002) G_GAN: 1.002 G_L1: 25.468 D_real: 0.509 D_fake: 0.597 \n",
+      "(epoch: 2, iters: 677, time: 0.219, data: 0.002) G_GAN: 1.002 G_L1: 23.700 D_real: 0.509 D_fake: 0.593 \n",
+      "(epoch: 2, iters: 777, time: 0.283, data: 0.002) G_GAN: 1.034 G_L1: 28.622 D_real: 0.521 D_fake: 0.568 \n",
+      "(epoch: 2, iters: 877, time: 0.217, data: 0.002) G_GAN: 1.020 G_L1: 18.377 D_real: 0.510 D_fake: 0.565 \n",
+      "(epoch: 2, iters: 977, time: 0.221, data: 0.003) G_GAN: 1.020 G_L1: 17.507 D_real: 0.542 D_fake: 0.574 \n"
      ]
     }
    ],
    "source": [
-    "!python train.py --dataroot /users/riya/race/gandataset --lambda_L1 10.0 --lr 0.00002 --display_port 8098 --name raceGAN_l1_test1 --model pix2pix --gpu_ids 1 --load_size 256 --crop_size 256"
+    "!python train.py --dataroot /users/riya/race/gandataset --lambda_L1 50.0 --lr 0.0000002 --display_port 8098 --name raceGAN_combo1 --model pix2pix --gpu_ids 1 --load_size 256 --crop_size 256"
    ]
   },
   {
