--- a/gancode/gan_training_v4.ipynb
+++ b/gancode/gan_training_v4.ipynb
@@ -710,7 +710,7 @@
       "               batch_size: 1                             \n",
       "                    beta1: 0.5                           \n",
       "          checkpoints_dir: ./checkpoints                 \n",
-      "           continue_train: True                          \t[default: False]\n",
+      "           continue_train: False                         \n",
       "                crop_size: 256                           \n",
       "                 dataroot: /users/riya/race/gandataset   \t[default: None]\n",
       "             dataset_mode: aligned                       \n",
@@ -722,7 +722,7 @@
       "             display_port: 8100                          \t[default: 8097]\n",
       "           display_server: http://localhost              \n",
       "          display_winsize: 256                           \n",
-      "                    epoch: 50                            \t[default: latest]\n",
+      "                    epoch: latest                        \n",
       "              epoch_count: 1                             \n",
       "                 gan_mode: vanilla                       \n",
       "                  gpu_ids: 2                             \t[default: 0]\n",
@@ -730,10 +730,10 @@
       "                init_type: normal                        \n",
       "                 input_nc: 3                             \n",
       "                  isTrain: True                          \t[default: None]\n",
-      "                lambda_L1: 100.0                         \n",
+      "                lambda_L1: 25.0                          \t[default: 100.0]\n",
       "                load_iter: 0                             \t[default: 0]\n",
       "                load_size: 256                           \t[default: 286]\n",
-      "                       lr: 5e-06                         \t[default: 0.0002]\n",
+      "                       lr: 2e-07                         \t[default: 0.0002]\n",
       "           lr_decay_iters: 50                            \n",
       "                lr_policy: linear                        \n",
       "         max_dataset_size: inf                           \n",
@@ -741,7 +741,7 @@
       "                 n_epochs: 100                           \n",
       "           n_epochs_decay: 100                           \n",
       "               n_layers_D: 3                             \n",
-      "                     name: raceGAN_test3                 \t[default: experiment_name]\n",
+      "                     name: raceGAN_combo3                \t[default: experiment_name]\n",
       "                      ndf: 64                            \n",
       "                     netD: basic                         \n",
       "                     netG: unet_256                      \n",
@@ -770,8 +770,6 @@
       "initialize network with normal\n",
       "initialize network with normal\n",
       "model [Pix2PixModel] was created\n",
-      "loading the model from ./checkpoints/raceGAN_test3/50_net_G.pth\n",
-      "loading the model from ./checkpoints/raceGAN_test3/50_net_D.pth\n",
       "---------- Networks initialized -------------\n",
       "[Network G] Total number of parameters : 54.414 M\n",
       "[Network D] Total number of parameters : 2.769 M\n",
@@ -811,7 +809,7 @@
       "    conn = self._new_conn()\n",
       "  File \"/usr/local/lib/python3.6/dist-packages/urllib3/connection.py\", line 187, in _new_conn\n",
       "    self, \"Failed to establish a new connection: %s\" % e\n",
-      "urllib3.exceptions.NewConnectionError: <urllib3.connection.HTTPConnection object at 0x7fa292f22668>: Failed to establish a new connection: [Errno 111] Connection refused\n",
+      "urllib3.exceptions.NewConnectionError: <urllib3.connection.HTTPConnection object at 0x7f7f57a99588>: Failed to establish a new connection: [Errno 111] Connection refused\n",
       "\n",
       "During handling of the above exception, another exception occurred:\n",
       "\n",
@@ -822,7 +820,7 @@
       "    method, url, error=e, _pool=self, _stacktrace=sys.exc_info()[2]\n",
       "  File \"/usr/local/lib/python3.6/dist-packages/urllib3/util/retry.py\", line 592, in increment\n",
       "    raise MaxRetryError(_pool, url, error or ResponseError(cause))\n",
-      "urllib3.exceptions.MaxRetryError: HTTPConnectionPool(host='localhost', port=8100): Max retries exceeded with url: /env/main (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7fa292f22668>: Failed to establish a new connection: [Errno 111] Connection refused',))\n",
+      "urllib3.exceptions.MaxRetryError: HTTPConnectionPool(host='localhost', port=8100): Max retries exceeded with url: /env/main (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f7f57a99588>: Failed to establish a new connection: [Errno 111] Connection refused',))\n",
       "\n",
       "During handling of the above exception, another exception occurred:\n",
       "\n",
@@ -839,74 +837,60 @@
       "    r = adapter.send(request, **kwargs)\n",
       "  File \"/usr/local/lib/python3.6/dist-packages/requests/adapters.py\", line 516, in send\n",
       "    raise ConnectionError(e, request=request)\n",
-      "requests.exceptions.ConnectionError: HTTPConnectionPool(host='localhost', port=8100): Max retries exceeded with url: /env/main (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7fa292f22668>: Failed to establish a new connection: [Errno 111] Connection refused',))\n",
-      "[Errno 111] Connection refused\n"
+      "requests.exceptions.ConnectionError: HTTPConnectionPool(host='localhost', port=8100): Max retries exceeded with url: /env/main (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x7f7f57a99588>: Failed to establish a new connection: [Errno 111] Connection refused',))\n",
+      "[Errno 111] Connection refused\n",
+      "\n",
+      "\n",
+      "Could not connect to Visdom server. \n",
+      " Trying to start a server....\n",
+      "Command: /usr/local/bin/python -m visdom.server -p 8100 &>/dev/null &\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "Could not connect to Visdom server. \n",
-      " Trying to start a server....\n",
-      "Command: /usr/local/bin/python -m visdom.server -p 8100 &>/dev/null &\n",
-      "create web directory ./checkpoints/raceGAN_test3/web...\n",
+      "create web directory ./checkpoints/raceGAN_combo3/web...\n",
       "/usr/local/lib/python3.6/dist-packages/torch/optim/lr_scheduler.py:134: UserWarning: Detected call of `lr_scheduler.step()` before `optimizer.step()`. In PyTorch 1.1.0 and later, you should call them in the opposite order: `optimizer.step()` before `lr_scheduler.step()`.  Failure to do this will result in PyTorch skipping the first value of the learning rate schedule. See more details at https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\n",
       "  \"https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\", UserWarning)\n",
-      "learning rate 0.0000050 -> 0.0000050\n",
-      "(epoch: 1, iters: 100, time: 0.200, data: 0.140) G_GAN: 2.844 G_L1: 8.922 D_real: 0.002 D_fake: 0.090 \n",
-      "(epoch: 1, iters: 200, time: 0.202, data: 0.001) G_GAN: 2.670 G_L1: 14.049 D_real: 0.045 D_fake: 0.086 \n",
-      "(epoch: 1, iters: 300, time: 0.202, data: 0.001) G_GAN: 3.147 G_L1: 13.677 D_real: 0.008 D_fake: 0.057 \n",
-      "(epoch: 1, iters: 400, time: 0.351, data: 0.001) G_GAN: 3.123 G_L1: 17.533 D_real: 0.001 D_fake: 0.062 \n",
-      "(epoch: 1, iters: 500, time: 0.203, data: 0.002) G_GAN: 1.048 G_L1: 8.482 D_real: 0.006 D_fake: 0.541 \n",
-      "(epoch: 1, iters: 600, time: 0.205, data: 0.003) G_GAN: 2.368 G_L1: 23.289 D_real: 0.002 D_fake: 0.141 \n",
-      "(epoch: 1, iters: 700, time: 0.204, data: 0.002) G_GAN: 2.288 G_L1: 20.205 D_real: 0.001 D_fake: 0.160 \n",
-      "(epoch: 1, iters: 800, time: 0.267, data: 0.001) G_GAN: 2.762 G_L1: 10.288 D_real: 0.794 D_fake: 0.076 \n",
-      "(epoch: 1, iters: 900, time: 0.205, data: 0.002) G_GAN: 1.462 G_L1: 8.992 D_real: 0.047 D_fake: 0.442 \n",
-      "(epoch: 1, iters: 1000, time: 0.207, data: 0.001) G_GAN: 2.381 G_L1: 8.471 D_real: 0.068 D_fake: 0.132 \n",
-      "(epoch: 1, iters: 1100, time: 0.205, data: 0.001) G_GAN: 3.057 G_L1: 7.653 D_real: 0.810 D_fake: 0.041 \n",
-      "(epoch: 1, iters: 1200, time: 0.267, data: 0.001) G_GAN: 3.660 G_L1: 18.117 D_real: 0.001 D_fake: 0.036 \n",
-      "(epoch: 1, iters: 1300, time: 0.206, data: 0.001) G_GAN: 1.366 G_L1: 6.439 D_real: 0.095 D_fake: 0.488 \n",
-      "(epoch: 1, iters: 1400, time: 0.208, data: 0.001) G_GAN: 2.646 G_L1: 12.810 D_real: 0.010 D_fake: 0.087 \n",
-      "(epoch: 1, iters: 1500, time: 0.208, data: 0.002) G_GAN: 1.489 G_L1: 9.573 D_real: 1.220 D_fake: 0.214 \n",
-      "(epoch: 1, iters: 1600, time: 0.270, data: 0.001) G_GAN: 2.600 G_L1: 11.793 D_real: 0.014 D_fake: 0.114 \n",
-      "End of epoch 1 / 200 \t Time Taken: 189 sec\n",
-      "learning rate 0.0000050 -> 0.0000050\n",
-      "(epoch: 2, iters: 77, time: 0.204, data: 0.001) G_GAN: 1.811 G_L1: 17.738 D_real: 0.037 D_fake: 0.246 \n",
-      "(epoch: 2, iters: 177, time: 0.210, data: 0.001) G_GAN: 1.859 G_L1: 7.071 D_real: 0.105 D_fake: 0.227 \n",
-      "(epoch: 2, iters: 277, time: 0.212, data: 0.001) G_GAN: 1.685 G_L1: 5.193 D_real: 1.612 D_fake: 0.134 \n",
-      "(epoch: 2, iters: 377, time: 0.348, data: 0.001) G_GAN: 2.182 G_L1: 17.800 D_real: 0.094 D_fake: 0.169 \n",
-      "(epoch: 2, iters: 477, time: 0.210, data: 0.001) G_GAN: 2.748 G_L1: 33.604 D_real: 0.001 D_fake: 0.089 \n",
-      "(epoch: 2, iters: 577, time: 0.211, data: 0.002) G_GAN: 2.065 G_L1: 13.343 D_real: 0.003 D_fake: 0.271 \n",
-      "(epoch: 2, iters: 677, time: 0.206, data: 0.002) G_GAN: 1.330 G_L1: 9.336 D_real: 0.017 D_fake: 0.477 \n",
-      "(epoch: 2, iters: 777, time: 0.270, data: 0.001) G_GAN: 2.718 G_L1: 9.113 D_real: 0.367 D_fake: 0.063 \n",
-      "(epoch: 2, iters: 877, time: 0.212, data: 0.001) G_GAN: 1.263 G_L1: 5.877 D_real: 0.359 D_fake: 0.408 \n",
-      "(epoch: 2, iters: 977, time: 0.206, data: 0.001) G_GAN: 3.253 G_L1: 21.367 D_real: 0.001 D_fake: 0.064 \n",
-      "(epoch: 2, iters: 1077, time: 0.211, data: 0.001) G_GAN: 1.862 G_L1: 10.940 D_real: 0.106 D_fake: 0.301 \n",
-      "(epoch: 2, iters: 1177, time: 0.267, data: 0.002) G_GAN: 3.190 G_L1: 7.291 D_real: 2.315 D_fake: 0.018 \n",
-      "(epoch: 2, iters: 1277, time: 0.214, data: 0.001) G_GAN: 2.046 G_L1: 4.820 D_real: 0.499 D_fake: 0.139 \n",
-      "(epoch: 2, iters: 1377, time: 0.204, data: 0.001) G_GAN: 2.040 G_L1: 14.163 D_real: 0.006 D_fake: 0.185 \n",
-      "(epoch: 2, iters: 1477, time: 0.210, data: 0.001) G_GAN: 1.899 G_L1: 12.510 D_real: 0.215 D_fake: 0.213 \n",
-      "(epoch: 2, iters: 1577, time: 0.273, data: 0.001) G_GAN: 1.092 G_L1: 8.524 D_real: 0.254 D_fake: 0.478 \n",
-      "End of epoch 2 / 200 \t Time Taken: 189 sec\n",
-      "learning rate 0.0000050 -> 0.0000050\n",
-      "(epoch: 3, iters: 54, time: 0.212, data: 0.001) G_GAN: 1.668 G_L1: 7.976 D_real: 0.590 D_fake: 0.305 \n",
-      "(epoch: 3, iters: 154, time: 0.207, data: 0.001) G_GAN: 1.341 G_L1: 21.744 D_real: 0.004 D_fake: 0.411 \n",
-      "(epoch: 3, iters: 254, time: 0.211, data: 0.001) G_GAN: 1.732 G_L1: 4.553 D_real: 1.388 D_fake: 0.137 \n",
-      "(epoch: 3, iters: 354, time: 0.397, data: 0.001) G_GAN: 2.189 G_L1: 8.325 D_real: 0.310 D_fake: 0.139 \n"
+      "learning rate 0.0000002 -> 0.0000002\n",
+      "(epoch: 1, iters: 100, time: 0.205, data: 0.190) G_GAN: 1.327 G_L1: 10.387 D_real: 1.262 D_fake: 0.442 \n",
+      "(epoch: 1, iters: 200, time: 0.206, data: 0.001) G_GAN: 1.270 G_L1: 15.658 D_real: 1.175 D_fake: 0.478 \n",
+      "(epoch: 1, iters: 300, time: 0.207, data: 0.002) G_GAN: 1.247 G_L1: 9.562 D_real: 1.122 D_fake: 0.485 \n",
+      "(epoch: 1, iters: 400, time: 0.341, data: 0.001) G_GAN: 1.159 G_L1: 11.085 D_real: 1.019 D_fake: 0.513 \n",
+      "(epoch: 1, iters: 500, time: 0.207, data: 0.002) G_GAN: 1.157 G_L1: 9.576 D_real: 0.966 D_fake: 0.515 \n",
+      "(epoch: 1, iters: 600, time: 0.206, data: 0.001) G_GAN: 1.126 G_L1: 10.587 D_real: 0.966 D_fake: 0.534 \n",
+      "(epoch: 1, iters: 700, time: 0.207, data: 0.001) G_GAN: 1.143 G_L1: 11.403 D_real: 0.907 D_fake: 0.519 \n",
+      "(epoch: 1, iters: 800, time: 0.272, data: 0.001) G_GAN: 1.097 G_L1: 14.481 D_real: 0.845 D_fake: 0.544 \n",
+      "(epoch: 1, iters: 900, time: 0.208, data: 0.001) G_GAN: 1.114 G_L1: 11.040 D_real: 0.861 D_fake: 0.528 \n",
+      "(epoch: 1, iters: 1000, time: 0.205, data: 0.001) G_GAN: 0.997 G_L1: 8.702 D_real: 0.691 D_fake: 0.588 \n",
+      "(epoch: 1, iters: 1100, time: 0.209, data: 0.002) G_GAN: 0.991 G_L1: 10.398 D_real: 0.616 D_fake: 0.604 \n",
+      "(epoch: 1, iters: 1200, time: 0.269, data: 0.001) G_GAN: 1.084 G_L1: 8.835 D_real: 0.759 D_fake: 0.557 \n",
+      "(epoch: 1, iters: 1300, time: 0.208, data: 0.002) G_GAN: 1.061 G_L1: 16.724 D_real: 0.754 D_fake: 0.583 \n",
+      "(epoch: 1, iters: 1400, time: 0.211, data: 0.001) G_GAN: 1.029 G_L1: 10.105 D_real: 0.654 D_fake: 0.568 \n",
+      "(epoch: 1, iters: 1500, time: 0.205, data: 0.001) G_GAN: 1.019 G_L1: 10.177 D_real: 0.641 D_fake: 0.568 \n",
+      "(epoch: 1, iters: 1600, time: 0.268, data: 0.001) G_GAN: 1.060 G_L1: 10.075 D_real: 0.673 D_fake: 0.564 \n",
+      "End of epoch 1 / 200 \t Time Taken: 190 sec\n",
+      "learning rate 0.0000002 -> 0.0000002\n",
+      "(epoch: 2, iters: 77, time: 0.209, data: 0.002) G_GAN: 1.045 G_L1: 7.449 D_real: 0.671 D_fake: 0.564 \n",
+      "(epoch: 2, iters: 177, time: 0.209, data: 0.001) G_GAN: 0.974 G_L1: 12.088 D_real: 0.522 D_fake: 0.607 \n",
+      "(epoch: 2, iters: 277, time: 0.209, data: 0.002) G_GAN: 1.079 G_L1: 9.513 D_real: 0.715 D_fake: 0.566 \n",
+      "(epoch: 2, iters: 377, time: 0.346, data: 0.002) G_GAN: 1.036 G_L1: 9.583 D_real: 0.505 D_fake: 0.556 \n",
+      "(epoch: 2, iters: 477, time: 0.213, data: 0.001) G_GAN: 1.066 G_L1: 9.667 D_real: 0.569 D_fake: 0.559 \n",
+      "(epoch: 2, iters: 577, time: 0.210, data: 0.001) G_GAN: 0.896 G_L1: 12.546 D_real: 0.385 D_fake: 0.656 \n",
+      "(epoch: 2, iters: 677, time: 0.205, data: 0.001) G_GAN: 1.027 G_L1: 9.489 D_real: 0.433 D_fake: 0.560 \n",
+      "(epoch: 2, iters: 777, time: 0.271, data: 0.001) G_GAN: 1.058 G_L1: 10.457 D_real: 0.481 D_fake: 0.542 \n"
      ]
     }
    ],
    "source": [
-    "!python train.py --dataroot /users/riya/race/gandataset --lr 0.000005 --continue_train --epoch 50 --display_port 8100 --name raceGAN_test3 --model pix2pix --gpu_ids 2 --load_size 256 --crop_size 256"
+    "!python train.py --dataroot /users/riya/race/gandataset --lambda_L1 25.0 --lr 0.0000002 --display_port 8100 --name raceGAN_combo3 --model pix2pix --gpu_ids 2 --load_size 256 --crop_size 256"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6323294d",
+   "id": "54f2fe06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6efb9cb1",
+   "id": "3b8a8481",
    "metadata": {},
    "outputs": [],
    "source": []
